[project]
name = "landing-gear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "henryhazelton-uni", email = "30250725@blackpool.ac.uk" }
]
requires-python = ">=3.14.0"
dependencies = []

[project.scripts]
landing-gear = "landing_gear:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
